--- a/smssync/build.gradle
+++ b/smssync/build.gradle
@@ -226,7 +226,7 @@ dependencies {
     compile 'com.squareup:otto:1.3.5'
     compile 'com.google.code.gson:gson:2.3.1'
     compile 'com.commonsware.cwac:wakeful:1.0.+'
-    androidTestCompile 'org.mockito:mockito-core:1.9.+'
+    androidTestCompile 'org.mockito:mockito-core:1.9.5'
     androidTestCompile 'com.google.dexmaker:dexmaker:1.+'
     androidTestCompile 'com.google.dexmaker:dexmaker-mockito:1.+'
     androidTestCompile 'com.android.support.test:testing-support-lib:0.1'
